/*
 * Copyright (C) 2015 Red Hat, Inc.
 *
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";
/* Note : o proto3 fields are optional by default
          o required fields are not allowed in proto3 */

package flow;

enum FlowEndpointLayer {
  LINK = 0;
  NETWORK = 1;
  TRANSPORT = 2;
}

enum FlowEndpointType {
  ETHERNET = 0;
  IPV4 = 1;
  TCPPORT = 2;
  UDPPORT = 3;
  SCTPPORT = 4;
}

message FlowEndpointStatistics {
  string Value 	= 2;
  uint64 Packets = 5;
  uint64 Bytes = 6;
}

message FlowEndpointsStatistics {
  FlowEndpointType Type = 1;
  bytes Hash = 2; /* Symmetric hash */
  FlowEndpointStatistics AB = 3; /* A->B */
  FlowEndpointStatistics BA = 4; /* B->A */
}

message FlowStatistics {
  int64 Start = 1;
  int64 Last = 2;
  repeated FlowEndpointsStatistics Endpoints = 3;
}

message Flow {
  string UUID 			= 1;
  string LayersPath 		= 2;

  /* Data Flow info */
  FlowStatistics Statistics	= 3;

  string FlowUUID   = 5;

  /* Topology info */
  string ProbeGraphPath	= 11;
  string IfSrcGraphPath	= 14;
  string IfDstGraphPath	= 19;
}
